# find-me-a-house

./: .gitignore  README.md  borrowing_power.py  cashflows.py  property_analyser.py  pyproject.toml
property_analyser/: get_atlas_data.py  main.py  mapping_functions.py  property_analyser.py
property_analyser/data/: .gitignore
