[project]
name = "find-me-a-house"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "folium>=0.12",
    "geopandas>=1.1.1",
    "googlemaps>=4.10.0",
    "mapclassify>=2.10.0",
    "marimo>=0.14.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[tool.marimo.runtime]
output_max_bytes = 20_000_000
